<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/detail_list"
        android:enabled="true"
        android:icon="@drawable/ic_playlist_white"
        android:title="@string/list_match"
        app:showAsAction="collapseActionView|always" />

</menu>